@@ -1,4 +1,5 @@
 0.03
+ - Add bigger test for cdata.
 
 0.02 2016-04-20T17:04:58+02:00
  - Fix dependencies to PYX::Utils.
